##
## libqgl - The quick game library
## Copyright 2009 Sean Farell
##
## This file is part of libqgl.
##
## libqgl is free software: you can redistribute it and/or modify
## it under the terms of the GNU Lesser General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## libqgl is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU Lesser General Public License
## along with libqgl. If not, see <http://www.gnu.org/licenses/>.
##

lib_LTLIBRARIES = libqgl.la

libqgl_la_CXXFLAGS = -I$(top_srcdir)/include/qgl -DBUILD_QGL

libqgl_la_LIBADD =

libqgl_la_LDFLAGS = -version-info @LT_VERSION@

libqgl_la_SOURCES = Engine.cpp
